# legacy_code

eyro/: .gitignore  Cargo.toml  bacon.toml
eyro/client/: Cargo.toml
eyro/legacy/eyro_archive/eyro-client/: Cargo.toml
eyro/legacy/eyro_archive/eyro-client/src/: draw.rs  lib.rs  null.rs  packets.rs  receive_packets.rs  tick.rs
eyro/legacy/eyro_archive/eyro-client/src/map/: canvas_and_event_pump.rs  draw.rs  mod.rs  packets.rs  receive_packets.rs  tick.rs
eyro/legacy/eyro_archive/eyro-server/: Cargo.toml
eyro/legacy/eyro_archive/eyro-server/src/: config.rs  init.rs  lib.rs  main.rs  server.rs
eyro/legacy/eyro_archive/eyro-server/src/use_cases/: create_bullets.rs  hit_enemies.rs  increase_frame.rs  mod.rs  move_bullets.rs  move_monsters.rs  move_players.rs  respawn_enemies.rs  respond_to_map_requests.rs  send_packets.rs  sleep.rs
game/: .gitignore  Cargo.toml
game/src/: main.rs
gol/: Cargo.toml
gol/src/: client.rs  game_loop.rs  main.rs  server.rs
haskell/euler/: Problem1.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem2.hs  Problem3.hs  Problem31.hs  Problem36.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem7.hs  Problem8.hs  Problem9.hs
haskell/hspec-test/: Math.hs  MathSpec.hs
haskell/libro/: test.hs
haskell/nacho/: 01saludo.hs  02círculos.hs  03promedio.hs  04conversion.hs  05invertido.hs  06hipotenusa.hs  07hora.hs  11.hs  (+9 more)
private_monorepo/: README.md
public_monorepo/: README.md  shithead.rs
rubyfuck/: Gemfile
topdown-shooter/: .gitignore
wood/: .gitignore
(+337 files in other folders)
