[package]
name = "eyro-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyro-values = { path = "../eyro-values" }
eyro-entities = { path = "../eyro-entities" }
eyro-repositories = { path = "../eyro-repositories" }
eyro-packets = { path = "../eyro-packets" }
sdl2 = "0.36.0"
