[package]
name = "eyro-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyro-values = { path = "../eyro-values" }
eyro-entities = { path = "../eyro-entities" }
eyro-repositories = { path = "../eyro-repositories" }
eyro-packets = { path = "../eyro-packets" }
eyro-client = { path = "../eyro-client" }
rand = "0.8.5"
